force-app/main/default/objects/Contact/fields/CliClientEndormi__c.field-meta.xml
<CustomField>
    <fullName>CliClientEndormi__c</fullName>
    <formula>Account.CliClientEndormi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Endormi</label>
    <type>Checkbox</type>
</CustomField>