force-app/main/default/objects/Contact/fields/CodePaysContact__c.field-meta.xml
<CustomField>
    <fullName>CodePaysContact__c</fullName>
    <formula>Account.CodePays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Pays Contact</label>
    <type>Text</type>
</CustomField>