force-app/main/default/objects/Contact/fields/IdMonCompteContact__c.field-meta.xml
<CustomField>
    <fullName>IdMonCompteContact__c</fullName>
    <formula>Account.IdMonCompte__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id MonCompte Contact</label>
    <type>Text</type>
</CustomField>